# srtoffset

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg
srtoffset/: __init__.py  srtoffset.py
tests/: conftest.py  test_subtitle.py  test_subtitle_file.py  test_subtitles_time.py
