[tool.poetry]
name = "srtoffset"
version = "0.1.2"
description = "Apply a time offset to a subtitle .srt file"
authors = ["Balthazar Rouberol <br@imap.cc>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/brouberol/srtoffset"
homepage = "https://github.com/brouberol/srtoffset"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
pytest-cov = "^2.8"

[tool.poetry.scripts]
srtoffset="srtoffset.srtoffset:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
